# tesseract-simple-gui

./: .gitignore  LICENSE  README.md  lang.json  pyproject.toml  tss_simple.py
