[tool.poetry]
name = "tesseract-gui"
version = "0.1.3"
description = "A very simple graphical User Interface for the OCR-Software Tesseract written in Python."
authors = ["oryon-dominik <oryon@cyberise.de>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
